Fix wrong padding on feature section on homepage for desktop

--- a/Components/Features.module.css
+++ b/Components/Features.module.css
@@ -23,6 +23,8 @@
     .features {
         flex-direction: row;
         gap: 1.875rem;
+        padding-top: 7.5rem;
+        padding-bottom: 7.5rem;
     }
 
     .features.doubleColumnTablet {
